# qr_with_logo

./: .gitignore  LICENSE  README.md  setup.cfg
qr_w_logo/: qr_w_logo.py
