[metadata]
name = qr_w_logo
version = 0.1.0
author = Aikige
description = Simple example to generate QR code with logo at center
license = MIT

[options]
packages = find:
install_requires =
	qrcode
	pillow
zip_safe = False

[options.entry_points]
console_scripts =
	qr_w_logo = qr_w_logo.qr_w_logo:main
